--- a/www/index.html
+++ b/www/index.html
@@ -234,9 +234,9 @@
                         <input type="text" id="txtReporter" value="" placeholder="admin">
                     </div>
                 </div>
-                <!-- <div class="ui-field-contain">    
+                <div class="ui-field-contain">    
                         <button type="submit" id="btn-create" class="ui-shadow ui-btn ui-corner-all">Create</button> 
-                </div>-->
+                </div>
             </form>
 
         </div><!-- /content -->
