--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -37,7 +37,7 @@
                 <a href="#create" class="ui-btn ui-btn-inline ui-mini ui-btn-icon-left ui-icon-plus">Create new</a>
             </div>
             <div>
-                <button type="button" onclick="showConfirmDialog()">Test</a>
+                <button type="button" id="test123">Test</a>
             </div>
             
             <div>
