--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -36,10 +36,7 @@
             <div>
                 <a href="#create" class="ui-btn ui-btn-inline ui-mini ui-btn-icon-left ui-icon-plus">Create new</a>
             </div>
-            <div>
-                <button type="button" id="test123">Test</a>
-            </div>
-            
+
             <div>
                 <table data-role="table" id="listing-table" data-mode="columntoggle" data-filter="true"
                     data-input="#txtSearch" class="ui-body-d ui-shadow table-stripe ui-responsive">
@@ -239,10 +236,19 @@
                     </div>
                 </div>
                 <div class="ui-field-contain">    
-                        <button type="submit" id="btn-create" class="ui-shadow ui-btn ui-corner-all">Create</button> 
+                        <button type="submit" id="btn-create" class="ui-shadow ui-btn ui-corner-all">Create</button>
                 </div>
             </form>
-
+            <div data-role="popup" id="popupDuplicate" data-overlay-theme="b" data-theme="b" data-dismissible="false"
+                style="max-width:400px;">
+                    <div data-role="header" data-theme="a">
+                        <h2>Warning!!!</h1>
+                    </div>
+                    <div role="main" class="ui-content">
+                        <h3 class="ui-title" id="duplicate-message"></h3>    
+                        <a href="#" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-rel="back">OK</a>       
+                    </div>
+            </div>
         </div><!-- /content -->
 
         <div data-role="footer">
